--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data
-        >
+    <data>
 
         <variable
             name="viewmodel"
@@ -16,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E2E2E2"
-        tools:context=".ui.auth.LoginActivity">
+        tools:context=".views.auth.LoginActivity">
 
 
         <RelativeLayout
