--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:title="Home"
-        android:id="@+id/fragmentHome"
+        android:id="@+id/ProfilefragmentHome"
         />
 
     <item
-        android:title="Users"
-        android:id="@+id/fragmentUsers"
+        android:title="Quotes"
+        android:id="@+id/QuoteFragment"
         />
 
 </menu>
