--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,9 @@
         android:name="com.mayakoba.appxone.kotlin_01.views.auth.fragments.ProfileFragment"
         android:label="profile_fragment"
         tools:layout="@layout/profile_fragment" />
+    <fragment
+        android:id="@+id/QuoteFragment"
+        android:name="com.mayakoba.appxone.kotlin_01.views.quotes.quoteFragment"
+        android:label="quote_fragment"
+        tools:layout="@layout/quote_fragment" />
 </navigation>
